<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tk.appstart.start.SobreActivity"
    tools:showIn="@layout/activity_sobre">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:paddingBottom="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sobre_app"
                android:textColor="@color/azulEscuro"
                android:textStyle="bold"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTexto"
                android:text="@string/sobre_nos"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sobre_equipe"
                android:textColor="@color/azulMedio"
                android:textStyle="bold"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_Adjailson"
                android:textAlignment="center"
                android:textColor="@color/azulMedio"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cargo_Adjailson"
                android:textAlignment="center"
                android:textColor="@color/colorTexto"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_Luiz"
                android:textAlignment="center"
                android:textColor="@color/azulMedio"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cargo_Luiz_e_Rafa"
                android:textAlignment="center"
                android:textColor="@color/colorTexto"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_Rafael"
                android:textAlignment="center"
                android:textColor="@color/azulMedio"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cargo_Luiz_e_Rafa"
                android:textAlignment="center"
                android:textColor="@color/colorTexto"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_Sergio"
                android:textAlignment="center"
                android:textColor="@color/azulMedio"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cargo_Sergio"
                android:textAlignment="center"
                android:textColor="@color/colorTexto"
                android:textSize="16dp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
