<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tk.appstart.start.Assunto1Activity"
    tools:showIn="@layout/activity_assunto1">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBranco"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/colorBranco"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/logica"
                android:textColor="@color/azulEscuro"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sobre_logica"
                android:textColor="@color/colorTexto"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/algoritmo"
                android:textColor="@color/azulEscuro"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="Arial"
                android:text="@string/textoAlgo"
                android:textColor="@color/colorTexto"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="Arial"
                android:text="@string/exemplo_algoritmo"
                android:textColor="@color/azulMedio"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exemplo_fluxograma"
                android:textColor="@color/colorTexto"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/legenda_decisao_loop"/>

            <ImageView
                android:id="@+id/fluxograma_soma"
                android:layout_width="170dp"
                android:layout_height="390dp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/usando_python"
                android:textColor="@color/azulEscuro"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sobre_python"
                android:textColor="@color/colorTexto"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/codigo_soma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="@color/colorTexto"
                android:textStyle="bold"
                android:typeface="monospace" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/variaveis"
                    android:textColor="@color/azulEscuro"
                    android:textSize="18dp" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mais"
                    android:layout_marginLeft="20dp"
                    android:background="@color/transparent"
                    android:onClick="btSobreVariaveis"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sobre_variaveis"
                android:textColor="@color/colorTexto"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/codigo_subtracao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTexto"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/animacao_variavel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="exercicioAssunto1"
                android:padding="10dp"
                android:textAllCaps="false"
                android:text="@string/praticar"
                android:textColor="@color/colorBranco"
                android:textSize="16dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
